--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,17 +2,27 @@
 
 - type: github
   icon: "fab fa-github"
+  url:  'https://www.github.com/KarinaGante/' 
+  noblank: false
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: linkedin
+  icon: "fab fa-linkedin"
+  url:  'https://www.linkedin.com/in/karina-gante/' 
+  noblank: false
 
 - type: email
   icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+  url:  'mailto:karina.g@aluno.ifsp.edu.br' 
+  noblank: false
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+- type: instagram
+  icon: "fa-brands fa-instagram"
+  url:  'https://www.instagram.com/karinovisk02/' 
+  noblank: false
+
+# - type: rss
+ # icon: "fas fa-rss"
+  # noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
